--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
       <input type="checkbox" name="" id="chek" />
       <label for="chek"><i class="fa-solid fa-bars"></i></label>
       <img src="Images/smllogo.png" class="imagelogo" />
-      <h1 class="logo">SML WATERS</h1>
+      <h1 class="logo">SML WATERS TEST V1</h1>
       <nav>
         <a href="#">home</a>
         <a href="#">about</a>
